envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                tracing:
                  client_sampling:
                    value: 100.0
                  random_sampling:
                    value: 100.0
                  overall_sampling:
                    value: 100.0
                  provider:
                    name: envoy.tracers.opentelemetry
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                      grpc_service:
                        envoy_grpc:
                          cluster_name: otel_collector
                        timeout: 0.5s
                      service_name: edge-proxy
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: vechain
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: vechain_nodes
                            timeout: 30s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: vechain_nodes
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 2s
      load_assignment:
        cluster_name: vechain_nodes
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: node-a
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: node-b
                      port_value: 80

    - name: otel_collector
      type: STRICT_DNS
      connect_timeout: 2s
      http2_protocol_options: {}
      load_assignment:
        cluster_name: otel_collector
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: otel-collector
                      port_value: 4317

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
